--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-Hello World
-link to manual for github pages
-<a src='https://docs.github.com/en/pages'></a>
+<p>Hello World</p>
+<p>link to manual for github pages</p>
+<a src='https://docs.github.com/en/pages'>manual</a>
