--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p>Hello World</p>
 <p>link to manual for github pages</p>
-<a src='https://docs.github.com/en/pages'>manual</a>
+<a href='https://docs.github.com/en/pages'>manual</a>
